--- a/index_css.css
+++ b/index_css.css
@@ -2,6 +2,7 @@
 {
 	margin: 0px;
 	padding: 0px;
+	
 }
 
 .ribbon
@@ -10,7 +11,7 @@
 	height: 15px;
 	padding: 5px;
 	border-radius: 10px;
-	background-color: 	#800080;
+	background-color: 	#E7CAF6;
 
 }
 
@@ -37,8 +38,9 @@
 }
 
 a .tab_li:hover{
-	background-color: pink;
-	color: gray;
+	margin-top: 5px;
+	background-color: #9DFCFD;
+	color: black;
 	border: 0px solid black;
 	border-radius: 100px;
 	padding: 7px;
@@ -47,10 +49,11 @@ a .tab_li:hover{
 .project{
 	margin-top: 50px;
 	padding: 10px;
-	width: 1300px;
+	width: 450px;
 	height: 50px;
-	background-color: pink;
-	color: gray;
+	background-color: #9DFCFD;
+	color: black;
+	border: 1px solid black;
 	border-radius: 15px;
 }
 
@@ -58,7 +61,8 @@ a .tab_li:hover{
 	margin: 15px;
 	padding: 50px;
 	height: 1650px;
-	border: 1px solid black;
+	border: 1px solid white;
+	
 
 }
 
@@ -67,9 +71,10 @@ a .tab_li:hover{
 	padding: 50px;
 	width: 90%;
 	height: 400px;
-	border: 1px solid black;
+	border: 1px solid white;
 	display: flex;
 	float: left;
+	
 }
 
 .projects .div_2{
@@ -79,6 +84,7 @@ a .tab_li:hover{
 	height: 200px;
 	border: 1px solid black;
 	width: 50%;	
+	box-sizing: border-box;
 }
 
 .projects .div_3{
@@ -88,4 +94,5 @@ a .tab_li:hover{
 	height: 200px;
 	border: 1px solid black;	
 	width: 50%;
+	box-sizing: border-box;
 }
