--- a/index_css.css
+++ b/index_css.css
@@ -1,98 +1,166 @@
-.body
-{
-	margin: 0px;
-	padding: 0px;
-	
+body{
+	margin: 0;
+	padding: 0;
 }
 
-.ribbon
-{	margin: 0px 10px 10px 10px;
+div .header{
 	width: 1300px;
-	height: 15px;
-	padding: 5px;
-	border-radius: 10px;
-	background-color: 	#E7CAF6;
-
-}
-
-.tab
-{
-	width: 100%;
-	height: 32px;
-	padding: 5px;
-	border-radius: 10px;
-//	background-color: 	#801080;
-}
-
-.tab_ul
-{
+	height: 25px;
+	border: solid 1px red;
 	
 }
 
-.tab_li
-{	margin-left: 50px;
+.hometab_li
+{	
 	display: inline;
 	float: left;
-	text-decoration-style: none;
-	color: red;
-}
-
-a .tab_li:hover{
-	margin-top: 5px;
-	background-color: #9DFCFD;
-	color: black;
-	border: 0px solid black;
-	border-radius: 100px;
-	padding: 7px;
-}
-
-.project{
-	margin-top: 50px;
-	padding: 10px;
-	width: 450px;
-	height: 50px;
-	background-color: #9DFCFD;
-	color: black;
-	border: 1px solid black;
-	border-radius: 15px;
-}
-
-.projects{
-	margin: 15px;
-	padding: 50px;
-	height: 1650px;
-	border: 1px solid white;
-	
+	text-decoration: none;
+	padding: 5px;
+	position: relative;
+	left: 75px;
+	font-size: 18px;
 
 }
 
-.projects .div_1{
-	margin: 20px;
-	padding: 50px;
-	width: 90%;
-	height: 400px;
-	border: 1px solid white;
-	display: flex;
+.protitle{
+
+	width: 300px;
+	padding: 15px;
+	margin-top: 100px;
+	margin-left: 525px; 
+	border: solid 1px 	#ffe6e6;
+	border-radius: 50px;
+	box-shadow: 5px 5px 50px 10px 	#ffe6e6;
+
+
+}
+.maindiv{
+	width: 1200px;
+	height: 350px;
+	margin-top:100px; 
+	margin-left: 100px;
+	margin-right: 100px;
+	border: solid 1px white;
+	box-sizing: border-box;
+}
+
+.div1{
+	display: inline-block;
 	float: left;
+	width: 500px;
+	height: 300px;
+	margin: 20px;
+	border: solid 0.1px black;
+	box-sizing: border-box;	
+	border-radius: 60px 0px 60px 0px;
+	box-shadow: 10px 10px 10px 8px #eaeae1;
 	
 }
 
-.projects .div_2{
-	margin: 15px;
-	padding: 50px;
-	width: 33.34%
-	height: 200px;
-	border: 1px solid black;
-	width: 50%;	
-	box-sizing: border-box;
+
+.div1:hover{
+	box-shadow: 10px 10px 70px 8px yellow;
 }
 
-.projects .div_3{
-	margin: 15px;
-	padding: 50px;
-	width: 33.34%
-	height: 200px;
-	border: 1px solid black;	
-	width: 50%;
-	box-sizing: border-box;
+.div2{
+	display: inline-block;
+	float: right;
+	width: 500px;
+	height: 300px;
+	margin: 20px;
+	border: solid 0.1px black;
+	box-sizing: border-box;	
+	border-radius: 0px 60px 0px 60px;
+	box-shadow: 10px 10px 10px 8px #eaeae1;
+}
+
+.div2:hover{
+	box-shadow: 10px 10px 70px 8px orange;
+}
+
+
+.div3{
+	display: inline-block;
+	float: left;
+	width: 500px;
+	height: 300px;
+	margin: 20px;
+	border: solid 0.1px black;
+	box-sizing: border-box;	
+	border-radius: 0px 60px 0px 60px;
+	box-shadow: 10px 10px 10px 8px #eaeae1;
+}
+
+.div3:hover{
+	box-shadow: 10px 10px 70px 8px yellow;
+}
+
+
+.div4{
+	display: inline-block;
+	float: right;
+	width: 500px;
+	height: 300px;
+	margin: 20px;
+	border: solid 0.1px black;
+	box-sizing: border-box;	
+	border-radius: 60px 6px 60px 0px;
+	box-shadow: 10px 10px 10px 8px #eaeae1;
+}
+
+.div4:hover{
+	box-shadow: 10px 10px 70px 8px orange;
+}
+
+.div5{
+	display: inline-block;
+	float: left;
+	width: 500px;
+	height: 300px;
+	margin: 20px;
+	border: solid 0.1px black;
+	box-sizing: border-box;	
+	border-radius: 60px 0px 60px 0px;
+	box-shadow: 10px 10px 10px 8px #eaeae1;
+}
+
+.div5:hover{
+	box-shadow: 10px 10px 70px 8px yellow;
+}
+
+
+.div6{
+	display: inline-block;
+	float: right;
+	width: 500px;
+	height: 300px;
+	margin: 20px;
+	border: solid 0.1px black;
+	box-sizing: border-box;	
+	border-radius: 0px 60px 0px 60px;
+	box-shadow: 10px 10px 10px 8px #eaeae1;
+}
+
+.div6:hover{
+	box-shadow: 10px 10px 70px 8px orange;
+}
+
+.imghtml{
+	width: 280px;
+	position: relative;
+	left: 100px;
+}
+
+.imgjava{
+	width:450px;
+	position: relative;
+	left: 25px; 
+	top: 5px;
+	border-radius: 20px 20px;
+}
+
+.imgpython{
+	width: 300px;
+	position: relative;
+	left: 100px;
 }
