--- a/css/index_css.css
+++ b/css/index_css.css
@@ -1,6 +1,7 @@
 body{
 	margin: 0;
 	padding: 0;
+	
 }
 
 div .header{
@@ -11,7 +12,7 @@ div .header{
 }
 
 .hometab_li
-{	
+{	text-decoration: none;
 	display: inline;
 	float: left;
 	text-decoration: none;
@@ -22,6 +23,21 @@ div .header{
 
 }
 
+.hometab_li a
+{	
+	text-decoration: none;
+	color:gray;
+
+}
+.hometab_li a:hover{
+	color: black;
+	padding-left: 30px;
+	padding-right: 30px;
+	transition: 0.5s;
+
+}
+
+
 .protitle{
 
 	width: 300px;
@@ -31,9 +47,9 @@ div .header{
 	border: solid 1px 	#ffe6e6;
 	border-radius: 50px;
 	box-shadow: 5px 5px 50px 10px 	#ffe6e6;
-
-
 }
+
+
 .maindiv{
 	width: 1200px;
 	height: 350px;
@@ -42,6 +58,7 @@ div .header{
 	margin-right: 100px;
 	border: solid 1px white;
 	box-sizing: border-box;
+		
 }
 
 .div1{
@@ -72,6 +89,7 @@ div .header{
 	box-sizing: border-box;	
 	border-radius: 0px 60px 0px 60px;
 	box-shadow: 10px 10px 10px 8px #eaeae1;
+	position: relative;
 }
 
 .div2:hover{
@@ -163,4 +181,14 @@ div .header{
 	width: 300px;
 	position: relative;
 	left: 100px;
+}
+
+.bttn{
+	position: absolute;
+	top: 200px;
+	left: 350px;
+	border:solid 1px orange;
+	padding: 15px;
+	border-radius: 50px 50px;
+	background: white;
 }
