--- a/css/index_css.css
+++ b/css/index_css.css
@@ -4,6 +4,7 @@ body{
 	
 }
 
+
 div .header{
 	width: 1300px;
 	height: 25px;
@@ -56,7 +57,7 @@ div .header{
 	margin-top:100px; 
 	margin-left: 100px;
 	margin-right: 100px;
-	border: solid 1px white;
+	//border: solid 1px white;
 	box-sizing: border-box;
 		
 }
